# Vietnamese-Text-Summarization-

./: README.md  package-lock.json  requirements.txt
backend/: .env  .env.example  pyproject.toml
backend/src/: app_config.py
backend/src/engine/: STT.py  summarizer.py
backend/src/routers/: stt_routes.py  summarizer_routes.py  unified_routes.py
backend/src/schemas/: stt_schema.py  summarizer_schema.py  unified_schema.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/audio/: AudioUploader.tsx
frontend/src/components/common/: LoadingSpinner.tsx  ProgressIndicator.tsx
frontend/src/hooks/: useAudioUpload.ts  useSummarization.ts  useTranscription.ts  useUnifiedProcessing.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: audioSlice.ts  summarizationSlice.ts  transcriptionSlice.ts  uiSlice.ts
frontend/src/types/: api.ts  ui.ts
